# RetroRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Minirenderer.cpp  Minirenderer.h  README.md  config_panel.ini  gui.cpp  gui.h  imgui.ini  index.html  main.cpp  output.tga  settings.h  tgaimage.cpp  tgaimage.h  vcpkg.json
.github/workflows/: cmake-wasm32.yml
android-project/: .gitignore  build.gradle.kts  settings.gradle.kts
android-project/app/: CMakeLists.txt  build.gradle.kts
android-project/app/src/androidTest/java/com/krisp3t/retrorenderer/: ExampleInstrumentedTest.kt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/cpp/: CMakeLists.txt
android-project/app/src/main/java/com/krisp3t/retrorenderer/: MainActivity.java  MainActivity.kt
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml  themes.xml
android-project/app/src/main/res/values-night/: themes.xml
android-project/app/src/test/java/com/krisp3t/retrorenderer/: ExampleUnitTest.kt
android-project/gradle/: libs.versions.toml
android-project/gradle/wrapper/: gradle-wrapper.properties
assets/: config_panel.ini
assets/materials/: phong-constant.rrmatdef.json  phong-textured.rrmatdef.json  phong-vertex-color.rrmatdef.json  unlit-textured.rrmatdef.json  unlit-vertex-color.rrmatdef.json
assets/shaders/: phong-tex-gles.fs  phong-tex-gles.vs  phong-tex.fs  phong-tex.vs  phong-vc.fs  phong-vc.vs  skybox.fs  skybox.vs
cmake/vcpkg-triplets/: arm64-osx.cmake  x64-osx.cmake
enc_temp_folder/cbb71a359f18d4489e3672bd7b0bd3/: display.cpp
old/: Application.cpp  Application.h  defines.h  display.h  draw.h
old/Window/: Gui.cpp  Window.h
old/image/: tgaimage.cpp
old/render/: GLRenderer.cpp  IRenderer.h
old/render/windows/: DX11Globals.cpp  DX11Globals.h
shaders/: default.glsl
src/: Engine.cpp  Engine.h  application.cpp  application.h  defines.h  main.cpp  model.cpp  model.h  resourcemanager.cpp  resourcemanager.h  settings.h
src/Base/: Color.h  Config.h  Debug.h  Event.h  ExampleSceneBaseline.cpp  ExampleSceneBaseline.h  ExampleSceneCatalog.cpp  ExampleSceneCatalog.h  Handle.h  InputActions.h  Logger.cpp  Logger.h  MemoryProfiler.cpp  MemoryProfiler.h  Stats.h
src/Renderer/: Buffer.h  CpuFrame.h  FrameSnapshot.h  FrameSubmission.h  GLBackendCommon.cpp  GLBackendCommon.h  GLBackendRendererBase.cpp  GLBackendRendererBase.h  GLFramePresenter.cpp  GLFramePresenter.h  GLMeshResourceCache.h  GLTextureResourceCache.h  GLUiRenderer.cpp  GLUiRenderer.h  GridGizmo.cpp  GridGizmo.h  IFramePresenter.h  IHardwareRenderer.h  IRenderExecutor.h  IRenderer.h  InlineRenderExecutor.cpp  InlineRenderExecutor.h  InputManager.cpp  InputManager.h  MaterialRuntime.cpp  MaterialRuntime.h  MaterialTypes.h  Mesh.cpp  Mesh.h  RenderManager.cpp  RenderManager.h  RenderOutput.h  RenderPacket.h  RenderServices.h  RenderSystem.cpp  RenderSystem.h  RendererMemoryStats.h  RetroPalette.cpp  RetroPalette.h  Scene.cpp  (+8 more)
src/Renderer/GLES/: GLESRenderer.cpp  GLESRenderer.h
src/Renderer/OpenGL/: GLESRenderer.cpp  GLESRenderer.h  GLRenderer.cpp  GLRenderer.h
src/Renderer/Software/: Rasterizer.cpp  Rasterizer.h  SWRenderer.cpp  SWRenderer.h  SoftwareLighting.h
src/Scene/: AnimationTimeline.cpp  AnimationTimeline.h  AssimpSceneImporter.cpp  AssimpSceneImporter.h  Camera.cpp  Camera.h  ISceneImporter.h  ImportedSceneData.h  Light.h  LightweightObjSceneImporter.cpp  LightweightObjSceneImporter.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneImporterFactory.cpp  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  Transform.h  Vertex.h
src/Window/: AnimationPanel.cpp  AnimationPanel.h  ConfigPanel.cpp  ConfigPanel.h  DisplayManager.cpp  DisplayManager.h  DisplaySystem.cpp  DisplaySystem.h  EditorContext.h  ImGuiTexture.h  InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  SceneEditorPanel.cpp  SceneEditorPanel.h  Window.cpp  Window.h
src/display/: display.cpp  display.h  draw.cpp  draw.h  gui.cpp  gui.h  settings.h  utility.cpp  utility.h
src/image/: tgaimage.h
src/include/: kris_glheaders.h
src/model/: Model.cpp
src/native/: AndroidBridge.cpp  AndroidBridge.h  FileDialog.h  FileDialogLinux.cpp  FileDialogMac.mm  FileDialogWindows.cpp
src/native/android/: AndroidBridge.cpp  AndroidBridge.h
src/native/emscripten/: EmscriptenBridge.h  imgui_impl_sdl2.md
src/old/: gui.cpp  utility.h
src/render/: DX11Globals.cpp  DX11Globals.h  DX11Renderer.cpp  DX11Renderer.h  GLRenderer.cpp  GLRenderer.h  IRenderer.h  SWRenderer.cpp  SWRenderer.h
src/shaders/: Main.ps.hlsl  Main.vs.hlsl
src/window/: Gui.cpp  Gui.h  Window.cpp  Window.h
tests/: CMakeLists.txt  ConcurrencyTests.cpp  ExampleSceneBaselineTests.cpp  ExampleSceneCatalogTests.cpp  GoldenHashUtils.h  GoldenRenderingTests.cpp  IntegrationTests.cpp  LightweightObjSceneImporterTests.cpp  RasterizerTests.cpp  RenderSubmissionTests.cpp  SanitizerSmokeTests.cpp
tests/golden/: README.md  software_pipeline_hashes.txt
triplets/: x64-win-llvm.cmake
